--- a/src/app/components/store/search_product/searchproduct/searchproduct.component.html
+++ b/src/app/components/store/search_product/searchproduct/searchproduct.component.html
@@ -48,7 +48,7 @@
     </section>
 
     <!--- SHop MOdal --->
-<ng-template #produt_view let-modal>
+    <ng-template #produt_view let-modal  (click)="modal.dismiss('Cross click')">
       <div class="model-productview">
         <form>
           <div class="modal-body">
@@ -116,7 +116,7 @@
                   </div>
                   <div class="prod-bundle-select">
                     <h3>Select Bundle</h3>
-                    <div *ngFor="let bundle of bundles" class="radio-bundle">
+                    <!-- <div *ngFor="let bundle of bundles" class="radio-bundle">
                       <div class="form-check form-check-inline">
                         <input
                           class="form-check-input"
@@ -125,16 +125,49 @@
                           id="{{bundle.id}}"
                           value="{{bundle.value}}"
                           (change)="checkBundle(bundle.value,product.price)"
+                          checked
                         />
                         <label class="form-check-label" for="{{bundle.id}}"
                           >{{bundle.name}}</label
+                        >
+                      </div>               
+                    </div> -->
+    
+                      <div class="radio-bundle">
+                      <div class="form-check form-check-inline">
+                        <input
+                          class="form-check-input"
+                          type="radio"
+                          name="inlineRadioOptions"
+                          id="1"
+                          value="single"
+                          (change)="checkBundle('single',product.price)"
+                          checked
+                        />
+                        <label class="form-check-label" for="1"
+                          >Single</label
+                        >
+                      </div>               
+                    </div>
+                    <div class="radio-bundle">
+                      <div class="form-check form-check-inline">
+                        <input
+                          class="form-check-input"
+                          type="radio"
+                          name="inlineRadioOptions"
+                          id="2"
+                          value="multiple"
+                          (change)="checkBundle('multiple',product.price)"
+                        />
+                        <label class="form-check-label" for="2"
+                          >2-pk (Save 5%)</label
                         >
                       </div>               
                     </div>
                   </div>
                   <div class="prod-bundle-select mt-0 delivery-radio">
                     <h3>Select Delivery</h3>
-                    <div *ngFor="let type of cartTypes; let i = index" class="radio-bundle">
+                    <!-- <div *ngFor="let type of cartTypes; let i = index" class="radio-bundle">
                       <div class="form-check form-check-inline">
                         <input
                           class="form-check-input"
@@ -147,7 +180,39 @@
                         <label class="form-check-label" for="{{i}}{{type}}"
                           >{{type == 0 ? 'Single Delivery' : 'Subscribe & Save 15%'}}</label>
                       </div>                 
+                    </div> -->
+    
+                    <div class="radio-bundle">
+                      <div class="form-check form-check-inline">
+                        <input
+                          class="form-check-input"
+                          type="radio"
+                          name="inlineRadioOptionsdelivery"
+                          id="3"
+                          value="0"
+                          (change)="checkDelivery(0)"    
+                          checked                  
+                        />
+                        <label class="form-check-label" for="3"
+                          >Single Delivery</label>
+                      </div>                 
                     </div>
+    
+                    <div class="radio-bundle">
+                      <div class="form-check form-check-inline">
+                        <input
+                          class="form-check-input"
+                          type="radio"
+                          name="inlineRadioOptionsdelivery"
+                          id="4"
+                          value="1"
+                          (change)="checkDelivery(1)"                      
+                        />
+                        <label class="form-check-label" for="4"
+                          >Subscribe & Save 15%</label>
+                      </div>                 
+                    </div>
+    
                   </div>
                   <div class="custom-shiping">
                     <h3>Customize Shipment</h3>
