--- a/src/app/components/auth/forgot-password/forgot-password.component.html
+++ b/src/app/components/auth/forgot-password/forgot-password.component.html
@@ -15,8 +15,8 @@
                 </div>
               </div>
               <div class="form-group mb-3">       
-                <span class="show-pwd" (click)="showHidePassword()"><i [className]="showPassword ?  'far fa-eye-slash' : 'far fa-eye'"></i></span>    
-                <input type="password" formControlName="confirmPassword" class="form-control" placeholder="Confirm Password *"
+                 
+                <input [type]="cPassword ? 'text': 'password'" formControlName="confirmPassword" class="form-control" placeholder="Confirm Password *"
                   [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
                 <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
                   <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required</div>
