--- a/src/app/components/store/product-detail/product-detail.component.html
+++ b/src/app/components/store/product-detail/product-detail.component.html
@@ -70,7 +70,7 @@
 
                           <div class="prod-bundle-select">
                             <h3>Select Bundle</h3>
-                            <div *ngFor="let bundle of bundles" class="radio-bundle">
+                            <!-- <div *ngFor="let bundle of bundles" class="radio-bundle">
                               <div class="form-check form-check-inline">
                                 <input
                                   class="form-check-input"
@@ -84,7 +84,40 @@
                                   >{{bundle.name}}</label
                                 >
                               </div>               
-                            </div>
+                            </div> -->
+
+                            
+                  <div class="radio-bundle">
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="inlineRadioOptions"
+                        id="1"
+                        value="single"
+                        (change)="checkBundle('single',productDetail.price)"
+                        checked
+                      />
+                      <label class="form-check-label" for="1"
+                        >Single</label
+                      >
+                    </div>               
+                  </div>
+                  <div class="radio-bundle">
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="inlineRadioOptions"
+                        id="2"
+                        value="multiple"
+                        (change)="checkBundle('multiple',productDetail.price)"
+                      />
+                      <label class="form-check-label" for="2"
+                        >2-pk (Save 5%)</label
+                      >
+                    </div>               
+                  </div>
                           </div>
 
                           <!-- <div class="prod-bundle-select mt-0 delivery-radio">
@@ -102,7 +135,7 @@
                           </div> -->
                           <div class="prod-bundle-select mt-0 delivery-radio">
                             <h3>Select Delivery</h3>
-                            <div *ngFor="let type of cartTypes; let i = index" class="radio-bundle">
+                            <!-- <div *ngFor="let type of cartTypes; let i = index" class="radio-bundle">
                               <div class="form-check form-check-inline">
                                 <input
                                   class="form-check-input"
@@ -115,7 +148,37 @@
                                 <label class="form-check-label" for="{{i}}{{type}}"
                                   >{{type == 0 ? 'Single Delivery' : 'Subscribe & Save 15%'}}</label>
                               </div>                 
-                            </div>
+                            </div> -->
+                            <div class="radio-bundle">
+                                <div class="form-check form-check-inline">
+                                  <input
+                                    class="form-check-input"
+                                    type="radio"
+                                    name="inlineRadioOptionsdelivery"
+                                    id="3"
+                                    value="0"
+                                    (change)="checkDelivery(0)"    
+                                    checked                  
+                                  />
+                                  <label class="form-check-label" for="3"
+                                    >Single Delivery</label>
+                                </div>                 
+                              </div>
+              
+                              <div class="radio-bundle">
+                                <div class="form-check form-check-inline">
+                                  <input
+                                    class="form-check-input"
+                                    type="radio"
+                                    name="inlineRadioOptionsdelivery"
+                                    id="4"
+                                    value="1"
+                                    (change)="checkDelivery(1)"                      
+                                  />
+                                  <label class="form-check-label" for="4"
+                                    >Subscribe & Save 15%</label>
+                                </div>                 
+                              </div>
                           </div>
 
                           <div class="custom-shiping">
