--- a/src/app/components/store/shop/shop.component.html
+++ b/src/app/components/store/shop/shop.component.html
@@ -103,7 +103,7 @@
   </div>
 </section>
 <!--- SHop MOdal --->
-<ng-template #produt_view let-modal  (click)="modal.dismiss('Cross click')">
+<ng-template #produt_view let-modal>
   <div class="model-productview">
     <form>
       <div class="modal-body">
