--- a/src/app/components/store/checkout/checkout.component.html
+++ b/src/app/components/store/checkout/checkout.component.html
@@ -342,7 +342,7 @@
                                                         <div class="col-md-12">
                                                             <div class="form-group">
                                                                 <input type="text" class="form-control"
-                                                                    formControlName="firstName" placeholder="First Name"/>                                                              
+                                                                    formControlName="firstName" placeholder="First Name" required/>                                                              
                                                             </div>
                                                         </div>
                                                         <div class="col-md-12">
@@ -363,29 +363,26 @@
                                                             <div class="form-group">
                                                                 <input type="text" class="form-control"
                                                                     formControlName="city" placeholder="City"
-                                                                    [ngModelOptions]="{standalone: true}" />                                                                
+                                                                    />                                                                
                                                             </div>
                                                         </div>
                                                         <div class="col-md-6">
                                                             <div class="form-group">
                                                                 <input type="text" class="form-control"
                                                                     formControlName="state" placeholder="State"
-                                                                    [ngModelOptions]="{standalone: true}"/>                                                              
+                                                                    />                                                              
                                                             </div>
                                                         </div>
                                                         <div class="col-md-12">
                                                             <div class="form-group">
                                                                 <input type="number" class="form-control"
-                                                                    formControlName="zip" placeholder="Zip"
-                                                                    [ngModelOptions]="{standalone: true}" maxlength="5"
-                                                                    minlength="5" />                                                              
+                                                                    formControlName="zip" placeholder="Zip"/>                                                              
                                                             </div>
                                                         </div>
                                                         <div class="col-md-12">
                                                             <div class="form-group">
                                                                 <input type="text" class="form-control"
-                                                                    formControlName="country" placeholder="Country"
-                                                                    [ngModelOptions]="{standalone: true}" />                                                              
+                                                                    formControlName="country" placeholder="Country"/>                                                              
                                                             </div>
                                                         </div>
                                                     </div>
