--- a/src/app/components/store/checkout/checkout.component.html
+++ b/src/app/components/store/checkout/checkout.component.html
@@ -342,11 +342,7 @@
                                                         <div class="col-md-12">
                                                             <div class="form-group">
                                                                 <input type="text" class="form-control"
-                                                                    formControlName="firstName" placeholder="First Name"
-                                                                    [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }"/>  
-                                                                    <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
-                                                                    <div *ngIf="f.firstName.errors.required">First Name is required</div>
-                                                                    </div>                                                            
+                                                                    formControlName="firstName" placeholder="First Name"/>                                                                                                                                
                                                             </div>
                                                         </div>
                                                         <div class="col-md-12">
