--- a/src/app/components/layout/app-header/app-header.component.html
+++ b/src/app/components/layout/app-header/app-header.component.html
@@ -5,16 +5,18 @@
         <a class="navbar-brand" [routerLink]="['']" [routerLinkActive]="['active']"><img
             src="../../assets/logo-wink.png" /></a>
       </div>
-      <button (click)="toggleDisplayDivIf()" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-menu"
-        aria-controls="main-menu" aria-expanded="false" aria-label="Toggle navigation">
+      <button (click)="toggleDisplayDivIf()" class="navbar-toggler" type="button" data-bs-toggle="collapse"
+        data-bs-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
       </button>
       <div id="main-menu" class="show-mob">
         <ul class="right-menu ">
-       <li class="cart-item"><a [routerLink]="['/store/cart']"><i class="fa fa-shopping-bag"></i><span *ngIf="cartItems" class="cart-info">{{cartItems}}</span></a></li>
-       </ul>
+          <li class="cart-item"><a [routerLink]="['/store/cart']"><i class="fa fa-shopping-bag"></i><span
+                *ngIf="cartItems" class="cart-info">{{cartItems}}</span></a></li>
+        <li><a (click)="showSearchbar()"><i class="fa fa-search"></i></a></li>
+        </ul>
       </div>
-    
+
       <div class="collapse navbar-collapse d" *ngIf="isDesktopMenu" id="main-menu">
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -47,18 +49,16 @@
         </div>
         <ul class="right-menu">
           <li>
-            <div class="searchOptions">
-              <input class="form-control" type="text" [(ngModel)]="searchText"   name="search"/>
-          <button type="submit" class="search-ico" (click)="searchProduct()">
-            <i class="fa fa-search"></i>
-          </button>
-            </div></li>
-          <li class="cart-item"><a [routerLink]="['/store/cart']"><i class="fa fa-shopping-bag"></i><span *ngIf="cartItems" class="cart-info">{{cartItems}}</span></a></li>
+            <a (click)="showSearchbar()"><i class="fa fa-search"></i></a>
+          </li>
+          <li class="cart-item"><a [routerLink]="['/store/cart']"><i class="fa fa-shopping-bag"></i><span
+                *ngIf="cartItems" class="cart-info">{{cartItems}}</span></a></li>
           <li *ngIf="!user"><a [routerLink]="['/sign-in']" class="log-links">SIGN IN</a></li>
           <li *ngIf="user"><a (click)="logout()" class="log-links">Log out</a></li>
         </ul>
       </div>
-      <div class="collapse navbar-collapse m" id="main-menu" *ngIf="isMobileMenu" [className]="toggleDisplayDivIf ?  'showmenu' : 'hidemenu'">
+      <div class="collapse navbar-collapse m" id="main-menu" *ngIf="isMobileMenu"
+        [className]="toggleDisplayDivIf ?  'showmenu' : 'hidemenu'">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/store']" [routerLinkActive]="['active']">Shop</a>
@@ -72,20 +72,35 @@
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/enrollment']" [routerLinkActive]="['active']">Join</a>
           </li>
-         <li class="nav-item" *ngIf="!user"><a [routerLink]="['/sign-in']" class="log-links nav-link">SIGN IN</a></li>
-         <li class="nav-item" *ngIf="user"><a (click)="logout()" class="log-links nav-link">Log out</a></li>
-         <li class="nav-item mob-search">
-          <div class="searchOptions">
-            <input class="form-control" type="text"   [(ngModel)]="searchText" name="search"/>
-        <button type="submit" class="search-ico" (click)="searchProduct()">
-          <i class="fa fa-search"></i>
-        </button>
-          </div></li>
+          <li class="nav-item" *ngIf="!user"><a [routerLink]="['/sign-in']" class="log-links nav-link">SIGN IN</a></li>
+          <li class="nav-item" *ngIf="user"><a (click)="logout()" class="log-links nav-link">Log out</a></li>
+        
         </ul>
         <div class="logo-center">
           <a class="navbar-brand" [routerLink]="['']" [routerLinkActive]="['active']"><img
               src="../../assets/logo-wink.png" /></a>
-        </div>  
+        </div>
+      </div>
+
+      <div class="searchOptionsbox" *ngIf="isSearchshow">
+        <div class="close-ico">
+          <a (click)="closeSearchbar()">
+            <svg id="Icon_Close_Rounded" data-name="Icon / Close / Rounded" xmlns="http://www.w3.org/2000/svg" width="24"
+            height="24" viewBox="0 0 24 24">
+            <rect id="Box" width="24" height="24" fill="none" />
+            <path id="Path_2016" data-name="Path 2016"
+              d="M111.8,3.3a.967.967,0,0,0-1.4,0l-4.9,4.9-4.9-4.9a.99.99,0,0,0-1.4,1.4l4.9,4.9-4.9,4.9a.99.99,0,0,0,1.4,1.4l4.9-4.9,4.9,4.9a.99.99,0,1,0,1.4-1.4l-4.9-4.9,4.9-4.9A.967.967,0,0,0,111.8,3.3Z"
+              transform="translate(-94 2)" fill="#000" />
+          </svg> 
+          </a>
+         
+        </div>
+        <div class="searchOption-inner">
+          <input class="form-control" type="text" [(ngModel)]="searchText" name="search" placeholder="Search Product" />
+          <button type="submit" class="search-ico" (click)="searchProduct()">
+            <i class="fa fa-search"></i>
+          </button>
+        </div>
       </div>
     </div>
   </nav>
