--- a/src/app/components/layout/app-layout/app-layout.component.html
+++ b/src/app/components/layout/app-layout/app-layout.component.html
@@ -1,7 +1,8 @@
-<app-notification-bar></app-notification-bar>
+<div  [className]="toggleDisplayDivIf ?  'wrapped-site' : 'wrapped-site noti-remove'">
+<app-notification-bar (myOutput) ="GetChildData($event)"></app-notification-bar>
 <app-header></app-header>
-<div class="main-content">
+<div class="main-content" >
     <router-outlet></router-outlet>
 </div>
-
 <app-footer></app-footer>
+</div>
